--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <li><a href="#top">Home</a></li>
                 <li><a href="#menu-sobre">Sobre</a></li>
                 <li><a href="#filmes">Filmes</a></li>
-                <li><a href="#aranhaverso">Aranhaverso</a></li>
+                <li><a href="#topverso">Aranhaverso</a></li>
             </ul>
         </nav>
     </header>
@@ -50,37 +50,48 @@
         <section id="filmes">
             <h3>Saga Tobey Maguire</h3>
             <section id="tobey">
-                <div class="card-filmes"><img src="images/homem-aranha-1.jpg" alt="Homem Aranha 1"></div>
-                <div class="card-filmes"><img src="images/homem-aranha-2.jpg" alt=""></div>
-                <div class="card-filmes"><img src="images/homem-aranha-3.jpg" alt=""></div>
+                <div class="card-filmes"><img src="images/homem-aranha-1.jpg" alt="Homem-Aranha"></div>
+                <div class="card-filmes"><img src="images/homem-aranha-2.jpg" alt="Homem-Aranha 2"></div>
+                <div class="card-filmes"><img src="images/homem-aranha-3.jpg" alt="Homem-Aranha 3"></div>
             </section>
             <h3>Saga Andrew Garfield</h3>
             <section id="andrew">
-                <div class="card-filmes"><img src="images/espetacular-homem-aranha-1.jpg" alt=""></div>
-                <div class="card-filmes"><img src="images/espetacular-homem-aranha-2.jpg" alt=""></div>
+                <div class="card-filmes"><img src="images/espetacular-homem-aranha-1.jpg" alt="O Espetacular Homem-Aranha"></div>
+                <div class="card-filmes"><img src="images/espetacular-homem-aranha-2.jpg" alt="O Espetacular Homem-Aranha 2"></div>
             </section>
             <h3>Saga Tom Holland</h3>
             <section id="holland">
-                <div class="card-filmes"><img src="images/de-volta-ao-lar.jpg" alt=""></div>
-                <div class="card-filmes"><img src="images/longe-de-casa.jpg" alt=""></div>
-                <div class="card-filmes"><img src="images/sem-volta-pra-casa.jpg" alt=""></div>
+                <div class="card-filmes"><img src="images/de-volta-ao-lar.jpg" alt="Homem-Aranha: De Volta ao Lar"></div>
+                <div class="card-filmes"><img src="images/longe-de-casa.jpg" alt="Homem-Aranha: Longe de Casa"></div>
+                <div class="card-filmes"><img src="images/sem-volta-pra-casa.jpg" alt="Homem-Aranha: Sem Volta Pra Casa"></div>
             </section>
         </section>
-        <h1>Aranhaverso</h1>
+        <h1 id="topverso">Aranhaverso</h1>
+        <h2>O que é?</h2>
         <section id="aranhaverso">
             <div id="aranhaverso-sobre">
-                <p class="texto">O Aranhaverso é um conceito que foi introduzido nas histórias em quadrinhos do Homem-Aranha e posteriormente adaptado para o filme de animação "Homem-Aranha no Aranhaverso" lançado em 2018. O termo "Aranhaverso" refere-se a um multiverso composto por várias realidades alternativas onde diferentes versões do Homem-Aranha existem.</p>
+                <p class="texto">O Aranhaverso é um conceito que foi introduzido nas histórias em quadrinhos do Homem-Aranha e posteriormente adaptado para o filme de animação <span class="p-destaque">"Homem-Aranha no Aranhaverso"</span> lançado em 2018. O termo "Aranhaverso" refere-se a um <span class="p-destaque">multiverso composto por várias realidades alternativas onde diferentes versões do Homem-Aranha existem.</span></p>
 
-                <p class="texto">No Aranhaverso, personagens como Peter Parker, Miles Morales, Spider-Gwen, Homem-Aranha Noir, Peni Parker e Spider-Ham, entre outros, são provenientes de diferentes realidades e se unem para enfrentar ameaças que afetam todo o multiverso. Cada versão do Homem-Aranha tem suas próprias características, histórias e habilidades únicas, criando uma rica tapeçaria de heróis aracnídeos.</p>
+                <p class="texto">No Aranhaverso, personagens como <span class="p-destaque">Peter Parker, Miles Morales, Spider-Gwen, Homem-Aranha Noir, Peni Parker e Spider-Ham,</span> entre outros, são provenientes de diferentes realidades e se unem para enfrentar ameaças que afetam todo o multiverso. <span class="p-destaque">Cada versão do Homem-Aranha tem suas próprias características, histórias e habilidades únicas, criando uma rica tapeçaria de heróis aracnídeos.</span></p>
 
-                <p class="texto">O conceito do Aranhaverso permite explorar diferentes interpretações e variações do Homem-Aranha, oferecendo uma perspectiva diversificada sobre o personagem. Essa abordagem amplia o universo do Homem-Aranha, permitindo que diferentes heróis compartilhem o mesmo manto e enfrentem desafios únicos em suas respectivas realidades.</p>
-
-                <p class="texto">"Homem-Aranha no Aranhaverso" foi altamente aclamado por sua animação inovadora, trama emocionante e representação diversa dos personagens do Homem-Aranha. O filme recebeu o Oscar de Melhor Filme de Animação em 2019 e foi um sucesso entre os fãs, solidificando o conceito do Aranhaverso como uma parte fascinante e popular do universo do Homem-Aranha.</p>
+                <p class="texto">O conceito do Aranhaverso permite explorar diferentes interpretações e <span class="p-destaque">variações do Homem-Aranha</span>, oferecendo uma perspectiva diversificada sobre o personagem. Essa abordagem amplia o universo do Homem-Aranha, permitindo que diferentes heróis compartilhem o mesmo manto e enfrentem desafios únicos em suas respectivas realidades.</p>
             </div>
+            <img id="aranhaverso-principal" src="images/aranhaverso-principal.png" alt="Peter Parker, Gwen Stacy e Miles Morales">
+        </section>
+        <h2>Miles Morales</h2>
+        <section id="miles">
+            <div id="miles-sobre">
+                <p class="texto">Miles Morales é um personagem dos quadrinhos da Marvel Comics que assumiu o manto do Homem-Aranha em uma <span class="p-destaque">realidade alternativa</span>. Ele foi criado pelo escritor Brian Michael Bendis e pelo ilustrador Sara Pichelli e fez sua primeira aparição em 2011, na série <span class="p-destaque">"Ultimate Fallout"</span> #4.</p>
+
+                <p class="texto">A história de Miles Morales difere um pouco da do Peter Parker tradicional. Ele vive em uma realidade onde Peter Parker, <span class="p-destaque">o Homem-Aranha original, morre tragicamente.</span> Miles, então, é picado por uma <span class="p-destaque">aranha geneticamente modificada</span> e adquire poderes semelhantes ao do Homem-Aranha, como força, agilidade, habilidades de escalar paredes e o "sentido de aranha".</p>
+
+                <p class="texto">O personagem ganhou grande popularidade e destaque desde sua criação. Ele se tornou uma <span class="p-destaque">figura importante</span> dentro do universo do Homem-Aranha e foi introduzido em outras mídias, como animações, videogames e, mais notavelmente, no filme de animação <span class="p-destaque">"Homem-Aranha no Aranhaverso"</span>, onde ele é o protagonista. Miles Morales representa a diversidade e a renovação do legado do Homem-Aranha, trazendo uma perspectiva fresca e cativante para o público.</p>
+            </div>
+            <img src="images/miles.png" alt="Miles Morales">
         </section>
     </main>
     <footer>
-        
+        <p>Desenvolvido por <a href="https://github.com/PabloPBS" rel="external" target="_blank">Pablo Barbosa Silva</a>, fã do personagem.©</p>
     </footer>
 </body>
 </html>
