menu fixo adicionado

--- a/index.html
+++ b/index.html
@@ -16,13 +16,14 @@
             <ul id="menu">
                 <li><a href="#top">Home</a></li>
                 <li><a href="#menu-sobre">Sobre</a></li>
-                <li><a href="#filmes">Filmes</a></li>
+                <li><a href="#top-filmes">Filmes</a></li>
                 <li><a href="#topverso">Aranhaverso</a></li>
             </ul>
         </nav>
     </header>
+    <div id="fixo"></div>
     <main>
-        <h1 id="top">Atores</h1>
+        <h1 id="top" class="anchor">Atores</h1>
         <h2>Tobey Maguire | Andrew Garfield | Tom Holland</h2>
         <section id="home">
             <div id="sobre">
@@ -34,7 +35,7 @@
             </div>
             <img id="triplice" src="images/triplice-alianca.png" alt="Tobey, Andrey e Holland">
         </section>
-        <h1 id="menu-sobre">O Herói</h1>
+        <h1 id="menu-sobre" class="anchor">O Herói</h1>
         <h2>Homem-Aranha</h2>
         <section id="hero">
             <div id="hero-sobre">
@@ -46,7 +47,7 @@
             </div>
             <img id="miranha" src="images/spider.png" alt="O Homem-Aranha">
         </section>
-        <h1>Filmes</h1>
+        <h1 id="top-filmes" class="anchor">Filmes</h1>
         <section id="filmes">
             <h3>Saga Tobey Maguire</h3>
             <section id="tobey">
@@ -66,7 +67,7 @@
                 <div class="card-filmes"><img src="images/sem-volta-pra-casa.jpg" alt="Homem-Aranha: Sem Volta Pra Casa"></div>
             </section>
         </section>
-        <h1 id="topverso">Aranhaverso</h1>
+        <h1 id="topverso" class="anchor">Aranhaverso</h1>
         <h2>O que é?</h2>
         <section id="aranhaverso">
             <div id="aranhaverso-sobre">
