--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         </section>
     </main>
     <footer>
-        <p>Desenvolvido por <a href="https://github.com/PabloPBS" rel="external" target="_blank">Pablo Barbosa Silva</a>, fã do personagem.©</p>
+        <p>Desenvolvido por <a href="https://github.com/PabloPBS" rel="external" target="_blank">Pablo Barbosa Silva</a>, fã do personagem.</p>
     </footer>
 </body>
 </html>
